[gd_scene load_steps=12 format=2]

[ext_resource path="res://Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://CaveWall.gd" type="Script" id=3]
[ext_resource path="res://1x/WestWall.png" type="Texture" id=4]
[ext_resource path="res://1x/SouthWall.png" type="Texture" id=5]
[ext_resource path="res://1x/NorthWall.png" type="Texture" id=6]
[ext_resource path="res://1x/EastWall.png" type="Texture" id=7]
[ext_resource path="res://1x/Item placeholder.png" type="Texture" id=8]
[ext_resource path="res://Main.gd" type="Script" id=9]
[ext_resource path="res://1x/Inventory.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 84.0475, 260.863 )

[node name="Main" type="Node2D"]
script = ExtResource( 9 )

[node name="CaveRoom" type="Node2D" parent="."]
script = ExtResource( 3 )
_north_wall = NodePath("NorthWall")
_east_wall = NodePath("EastWall")
_south_wall = NodePath("SouthWall")
_west_wall = NodePath("WestWall")

[node name="NorthWall" parent="CaveRoom" instance=ExtResource( 2 )]
visible = false

[node name="WallTexture" parent="CaveRoom/NorthWall" index="0"]
texture = ExtResource( 6 )

[node name="EastWall" parent="CaveRoom" instance=ExtResource( 2 )]
visible = false

[node name="WallTexture" parent="CaveRoom/EastWall" index="0"]
texture = ExtResource( 7 )

[node name="Item" parent="CaveRoom/EastWall" instance=ExtResource( 1 )]

[node name="SouthWall" parent="CaveRoom" instance=ExtResource( 2 )]
visible = false

[node name="WallTexture" parent="CaveRoom/SouthWall" index="0"]
texture = ExtResource( 5 )

[node name="WestWall" parent="CaveRoom" instance=ExtResource( 2 )]
visible = false

[node name="WallTexture" parent="CaveRoom/WestWall" index="0"]
texture = ExtResource( 4 )

[node name="PlayerInventory" type="Sprite" parent="."]
position = Vector2( 480, 50 )
texture = ExtResource( 10 )

[node name="ItemList" type="ItemList" parent="PlayerInventory"]
visible = false
margin_left = -286.0
margin_top = -11.0
margin_right = -114.0
margin_bottom = 155.0
mouse_default_cursor_shape = 2
items = [ "", ExtResource( 8 ), false, "", ExtResource( 8 ), false ]
max_columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArea" type="Area2D" parent="."]

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( 90, 270 )
shape = SubResource( 2 )

[node name="RightArea" type="Area2D" parent="."]

[node name="RightCollisionShape" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 870, 270 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="LeftArea" to="." method="_on_LeftArea_mouse_entered"]
[connection signal="mouse_exited" from="LeftArea" to="." method="_on_LeftArea_mouse_exited"]
[connection signal="mouse_entered" from="RightArea" to="." method="_on_RightArea_mouse_entered"]
[connection signal="mouse_exited" from="RightArea" to="." method="_on_RightArea_mouse_exited"]

[editable path="CaveRoom/NorthWall"]
[editable path="CaveRoom/EastWall"]
[editable path="CaveRoom/EastWall/Item"]
[editable path="CaveRoom/SouthWall"]
[editable path="CaveRoom/WestWall"]
